# rootify-project

./: .gitignore  Anchor.toml  Cargo.toml  README.md  firestore.indexes.json  firestore.rules  next.config.js  package-lock.json  package.json  storage.rules  tree_adoption_program_keypair.json
programs/tree-adoption/: Cargo.toml
programs/tree-adoption/src/: lib.rs
scripts/: init-db.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/adopt/: page.tsx
src/app/adopt/[slug]/: page.tsx
src/app/adopt/success/: page.tsx
src/app/api/analyze-location/: route.ts
src/app/api/analyze-personality/: route.ts
src/app/api/donations/: route.ts
src/app/chatbot/: page.tsx
src/app/dashboard/: page.tsx
src/app/explore/: page.tsx
src/app/organization/: layout.tsx  page.tsx
src/app/organization-register/: page.tsx
src/app/raise/: page.tsx
src/app/soultree/: page.tsx
src/app/test/: page.tsx
src/app/transactions/: page.tsx
src/app/verify/: page.tsx
src/app/why/: page.tsx
src/components/: AreaDetails.tsx  Footer.tsx  Header.tsx  IPFSUploadTest.tsx  IPFSViewer.tsx  IndiaMap.tsx  LocationInsights.tsx  OrganizationLogin.tsx  PlantingRequestForm.tsx  UserLogin.tsx  WalletSelector.tsx
src/data/: india-states.json  india-states.ts  land-use.json  land-use.ts
src/lib/: ai-analysis.ts  firebase-admin.ts  firebase.ts  ipfs-config.ts  privy-config.tsx  solana.ts  verification-contract.ts  wallet-config.tsx
src/programs/: tree_adoption.ts
src/types/: leaflet.d.ts  wallet.d.ts
tests/: tree-adoption.ts
(+23 files in other folders)
