[package]
name = "tree_adoption"
version = "0.1.0"
description = "Tree Adoption Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tree_adoption"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0" 